Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83956

TableView negative row/columnSpacing is ignored

XMLWordPrintable

    • Linux/X11
    • adfff7ec77223dfdd8c29327dc0f0181972516ef (qt/qtdeclarative/dev) 2c9dae7b22f9dc857715ca7da64185eed9523eb4 (qt/qtdeclarative/5.15)
    • Bug Fixing Candidates

      With qml TableView, negative row/columnSpacing values appear to be treated as zero.

      This prevents using cell borders without double-width lines appearing between adjacent cells (or, looking at it the other way, half-width lines around the periphery).  

      This is unlike with ListView where negative "spacing" is supported;
         spacing: -cellborderwidth
      nicely overlaps cells so that borders appear to have uniform width in the interior and edges.

      Hopefully TableView can be taught to handle negative spacings in the same way.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            jimav Jim Avera
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes