TableView: allow negative spacing

There is no apparent reason why negative spacing should not be allowed.
And in fact, you can use negative spacing to eliminate double edges
in the grid when the delegate is e.g a rectangle with a border.

Fixes: QTBUG-83956
Change-Id: I3be9d58ac8c43142e26e75165274e41872e878f4
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit adfff7ec77223dfdd8c29327dc0f0181972516ef)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>