src/quick/items/qquicktableview.cpp
@@ -2972,7 +2972,7 @@ qreal QQuickTableView::rowSpacing() const
 void QQuickTableView::setRowSpacing(qreal spacing)
 {
     Q_D(QQuickTableView);
-    if (qt_is_nan(spacing) || !qt_is_finite(spacing) || spacing < 0)
+    if (qt_is_nan(spacing) || !qt_is_finite(spacing))
         return;
     if (qFuzzyCompare(d->cellSpacing.height(), spacing))
         return;
@@ -2990,7 +2990,7 @@ qreal QQuickTableView::columnSpacing() const
 void QQuickTableView::setColumnSpacing(qreal spacing)
 {
     Q_D(QQuickTableView);
-    if (qt_is_nan(spacing) || !qt_is_finite(spacing) || spacing < 0)
+    if (qt_is_nan(spacing) || !qt_is_finite(spacing))
         return;
     if (qFuzzyCompare(d->cellSpacing.width(), spacing))
         return;
